--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 <body>
     <header>
         <div class="logo">
-            <!-- Wenn du dein Logo hochgeladen hast, z.B. als logo.png, passe den Dateinamen an -->
-            <!-- <img src="logo.png" alt="Logo HERCEG LUŠIĆ Solutions"> -->
-        </div>
+    <img src="logo-herceg.png" alt="Logo HERCEG LUŠIĆ Solutions">
+</div>
+
         <h1>HERCEG LUŠIĆ</h1>
         <p>Solutions für Recht, Verwaltung, IT, Buchhaltung und Organisation.</p>
     </header>
