--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 <body>
     <header>
         <div class="logo">
-    <img src="logo-herceg.png" alt="Logo HERCEG LUŠIĆ Solutions">
+    <img src="https://raw.githubusercontent.com/herceg133/url/85f581127a70bd581d66e6fb0c53f92d6d9761c8/herceg-lusic5050.jpg
+" alt="Logo HERCEG LUŠIĆ Solutions">
 </div>
 
         <h1>HERCEG LUŠIĆ</h1>
