--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     /* HERO SECTION */
     .hero {
-      background: url("https://images.unsplash.com/photo-1521791136064-7986c2920216?auto=format&fit=crop&w=1600&q=80")
+      background: url("https://images.unsplash.com/photo-1509395176047-4a66953fd231?auto=format&fit=crop&w=1600&q=80")
         center/cover no-repeat;
       height: 340px;
       display: flex;
@@ -145,7 +145,7 @@
     <section id="profil">
       <h2>Profil</h2>
 
-      <div class="image-block" style="background-image:url('https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?auto=format&fit=crop&w=1600&q=80');"></div>
+      <div class="image-block" style="background-image:url('https://images.unsplash.com/photo-1509395176047-4a66953fd231?auto=format&fit=crop&w=1600&q=80');"></div>
 
       <p>
         Die HERCEG LUŠIĆ UG steht für professionelle, strukturierte und diskrete Unternehmenslösungen.
@@ -202,4 +202,22 @@
         Für besonders vertrauliche Informationen empfehlen wir eine vorherige Abstimmung über alternative Übertragungswege.
       </p>
 
+      <p class="small">
+        Sollten Sie versehentlich eine E-Mail erhalten haben, die nicht für Sie bestimmt ist, löschen Sie diese bitte vollständig
+        und informieren Sie uns unverzüglich.
+      </p>
+    </section>
+
+  </main>
+
+  <footer>
+    &copy; <span id="year"></span> HERCEG LUSIC UG – Alle Rechte vorbehalten.
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+
+</body>
+</html>
 
