--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HERCEG LUŠIĆ UG</title>
-  <meta name="description" content="HERCEG LUŠIĆ UG – Professionelle Unternehmenslösungen." />
+  <meta name="description" content="HERCEG LUŠIĆ UG – Professionelle Unternehmensdienstleistungen." />
 
   <style>
     :root {
@@ -40,7 +40,7 @@
 
     /* HERO SECTION */
     .hero {
-      background: url("https://images.unsplash.com/photo-1509395176047-4a66953fd231?auto=format&fit=crop&w=1600&q=80")
+      background: url("https://images.unsplash.com/photo-1503387762-592deb58ef4e?auto=format&fit=crop&w=1600&q=80")
         center/cover no-repeat;
       height: 340px;
       display: flex;
@@ -128,7 +128,7 @@
 
   <!-- HERO IMAGE -->
   <div class="hero">
-    Professionelle Unternehmenslösungen
+    Professionelle Unternehmensdienstleistungen
   </div>
 
   <!-- NAVIGATION -->
@@ -145,10 +145,10 @@
     <section id="profil">
       <h2>Profil</h2>
 
-      <div class="image-block" style="background-image:url('https://images.unsplash.com/photo-1509395176047-4a66953fd231?auto=format&fit=crop&w=1600&q=80');"></div>
+      <div class="image-block" style="background-image:url('https://images.unsplash.com/photo-1503387762-592deb58ef4e?auto=format&fit=crop&w=1600&q=80');"></div>
 
       <p>
-        Die HERCEG LUŠIĆ UG steht für professionelle, strukturierte und diskrete Unternehmenslösungen.
+        Die HERCEG LUŠIĆ UG steht für professionelle, strukturierte und diskrete Unternehmensdienstleistungen.
         Unsere Tätigkeitsfelder sind vielseitig und richten sich nach den individuellen Anforderungen unserer Auftraggeber.
         Wir arbeiten zuverlässig, analytisch und mit einem hohen Anspruch an Qualität und Vertraulichkeit.
       </p>
@@ -220,4 +220,3 @@
 
 </body>
 </html>
-
