--- a/index.html
+++ b/index.html
@@ -145,16 +145,21 @@
     <section id="profil">
       <h2>Profil</h2>
 
-      <div class="image-block" style="background-image:url('https://images.unsplash.com/photo-1503387762-592deb58ef4e?auto=format&fit=crop&w=1600&q=80');"></div>
+      <!-- Neues Team-Bild -->
+      <div class="image-block" style="background-image:url('https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&w=1600&q=80');"></div>
 
       <p>
-        Die HERCEG LUŠIĆ UG steht für professionelle, strukturierte und diskrete Unternehmensdienstleistungen.
-        Unsere Tätigkeitsfelder sind vielseitig und richten sich nach den individuellen Anforderungen unserer Auftraggeber.
-        Wir arbeiten zuverlässig, analytisch und mit einem hohen Anspruch an Qualität und Vertraulichkeit.
+        Die HERCEG LUŠIĆ UG existiert seit 2014 und steht für professionelle, strukturierte und diskrete Unternehmensdienstleistungen.
+        Seit unserer Gründung setzen wir auf geschultes, verantwortungsbewusstes Personal, das mit hoher Sorgfalt und Präzision arbeitet.
       </p>
 
       <p>
-        Durch klare Prozesse, nachvollziehbare Dokumentation und effiziente Abläufe schaffen wir Ergebnisse,
+        Unsere internen Qualitätskontrollen stellen sicher, dass jeder Auftrag mit größter Zuverlässigkeit ausgeführt wird.
+        Dieser strukturierte Ansatz sorgt bei unseren Auftraggebern für den gewünschten Zufriedenheitseffekt und schafft Vertrauen in unsere Arbeitsweise.
+      </p>
+
+      <p>
+        Durch klare Prozesse, nachvollziehbare Dokumentation und effiziente Abläufe erzielen wir Ergebnisse,
         die in geschäftlichen, organisatorischen und administrativen Bereichen überzeugen.
       </p>
     </section>
@@ -175,10 +180,7 @@
     <section id="impressum">
       <h2>Impressum</h2>
       <p class="small">
-        <strong>Unternehmen:</strong> HERCEG LUSIC UG (haftungsbeschränkt)<br>
-        <strong>Geschäftsführer:</strong> Oliver Lusic, Matija Lusic<br>
-        <strong>Registergericht:</strong> Amtsgericht Nürnberg<br>
-        <strong>Handelsregisternummer:</strong> HRB 38742<br>
+        <strong>Unternehmen:</strong> HERCEG LUŠIĆ UG (haftungsbeschränkt)<br>
         <strong>Adresse:</strong> Sigmund-Schuckert-Str. 30, 90596 Schwanstetten<br>
         <strong>E-Mail:</strong> info@herceg-lusic.de
       </p>
@@ -211,7 +213,7 @@
   </main>
 
   <footer>
-    &copy; <span id="year"></span> HERCEG LUSIC UG – Alle Rechte vorbehalten.
+    &copy; <span id="year"></span> HERCEG LUŠIĆ UG – Alle Rechte vorbehalten.
   </footer>
 
   <script>
@@ -220,3 +222,4 @@
 
 </body>
 </html>
+
