--- a/index.html
+++ b/index.html
@@ -145,17 +145,17 @@
     <section id="profil">
       <h2>Profil</h2>
 
-      <!-- Neues Team-Bild -->
+      <!-- Team-Bild -->
       <div class="image-block" style="background-image:url('https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&w=1600&q=80');"></div>
 
       <p>
         Die HERCEG LUŠIĆ UG existiert seit 2014 und steht für professionelle, strukturierte und diskrete Unternehmensdienstleistungen.
-        Seit unserer Gründung setzen wir auf geschultes, verantwortungsbewusstes Personal, das mit hoher Sorgfalt und Präzision arbeitet.
+        Seit Beginn setzen wir auf geschultes, verantwortungsbewusstes Personal, das mit hoher Sorgfalt und Präzision arbeitet.
       </p>
 
       <p>
         Unsere internen Qualitätskontrollen stellen sicher, dass jeder Auftrag mit größter Zuverlässigkeit ausgeführt wird.
-        Dieser strukturierte Ansatz sorgt bei unseren Auftraggebern für den gewünschten Zufriedenheitseffekt und schafft Vertrauen in unsere Arbeitsweise.
+        Dieser strukturierte Ansatz sorgt bei unseren Auftraggebern für einen nachhaltigen Zufriedenheitseffekt und schafft Vertrauen in unsere Arbeitsweise.
       </p>
 
       <p>
@@ -182,7 +182,9 @@
       <p class="small">
         <strong>Unternehmen:</strong> HERCEG LUŠIĆ UG (haftungsbeschränkt)<br>
         <strong>Adresse:</strong> Sigmund-Schuckert-Str. 30, 90596 Schwanstetten<br>
-        <strong>E-Mail:</strong> info@herceg-lusic.de
+        <strong>E-Mail:</strong> info@herceg-lusic.de<br>
+        <strong>Registergericht:</strong> Amtsgericht Nürnberg<br>
+        <strong>Handelsregisternummer:</strong> HRB 38742
       </p>
     </section>
 
@@ -222,4 +224,3 @@
 
 </body>
 </html>
-
