--- a/index.html
+++ b/index.html
@@ -142,20 +142,20 @@
   <!-- MAIN CONTENT -->
   <main>
 
+    <!-- PROFIL -->
     <section id="profil">
       <h2>Profil</h2>
 
-      <!-- Team-Bild -->
       <div class="image-block" style="background-image:url('https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&w=1600&q=80');"></div>
 
       <p>
-        Die HERCEG LUŠIĆ UG existiert seit 2014 und steht für professionelle, strukturierte und diskrete Unternehmensdienstleistungen.
-        Seit Beginn setzen wir auf geschultes, verantwortungsbewusstes Personal, das mit hoher Sorgfalt und Präzision arbeitet.
+        Die HERCEG LUŠIĆ UG existiert seit 2014 und steht für professionelle, strukturierte und verantwortungsbewusste Unternehmensdienstleistungen.
+        Seit Beginn setzen wir auf geschultes und engagiertes Personal, das mit hoher Sorgfalt und Präzision arbeitet.
       </p>
 
       <p>
         Unsere internen Qualitätskontrollen stellen sicher, dass jeder Auftrag mit größter Zuverlässigkeit ausgeführt wird.
-        Dieser strukturierte Ansatz sorgt bei unseren Auftraggebern für einen nachhaltigen Zufriedenheitseffekt und schafft Vertrauen in unsere Arbeitsweise.
+        Dieser strukturierte Ansatz sorgt bei unseren Auftraggebern für einen nachhaltigen Zufriedenheitseffekt und stärkt das Vertrauen in unsere Arbeitsweise.
       </p>
 
       <p>
@@ -164,6 +164,7 @@
       </p>
     </section>
 
+    <!-- KONTAKT -->
     <section id="kontakt">
       <h2>Kontakt</h2>
 
@@ -177,6 +178,7 @@
       </p>
     </section>
 
+    <!-- IMPRESSUM -->
     <section id="impressum">
       <h2>Impressum</h2>
       <p class="small">
@@ -188,6 +190,7 @@
       </p>
     </section>
 
+    <!-- DATENSCHUTZ -->
     <section id="datenschutz">
       <h2>Datenschutz</h2>
 
@@ -224,3 +227,4 @@
 
 </body>
 </html>
+
