--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       margin: 0 auto;
     }
 
-    /* HERO SECTION */
+    /* HERO SECTION – neues Firmengebäude-Bild */
     .hero {
-      background: url("https://images.unsplash.com/photo-1503387762-592deb58ef4e?auto=format&fit=crop&w=1600&q=80")
+      background: url("https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1600&q=80")
         center/cover no-repeat;
       height: 340px;
       display: flex;
@@ -227,4 +227,3 @@
 
 </body>
 </html>
-
