--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       margin: 0 auto;
     }
 
-    /* HERO SECTION – neues Firmengebäude-Bild */
+    /* HERO SECTION – jetzt mit deinem neuen Bild */
     .hero {
-      background: url("https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1600&q=80")
+      background: url("https://raw.githubusercontent.com/herceg133/url/10b573da6a273fbad799dad5471038aefaa6953e/sean-pollock-PhYq704ffdA-unsplash.jpg")
         center/cover no-repeat;
       height: 340px;
       display: flex;
@@ -227,3 +227,4 @@
 
 </body>
 </html>
+
