--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
       line-height: 1.6;
     }
 
-    /* HEADER */
     header {
       background: var(--white);
       text-align: center;
@@ -38,7 +37,6 @@
       margin: 0 auto;
     }
 
-    /* HERO SECTION – jetzt mit deinem neuen Bild */
     .hero {
       background: url("https://raw.githubusercontent.com/herceg133/url/10b573da6a273fbad799dad5471038aefaa6953e/sean-pollock-PhYq704ffdA-unsplash.jpg")
         center/cover no-repeat;
@@ -53,7 +51,6 @@
       letter-spacing: 0.05em;
     }
 
-    /* NAVIGATION */
     nav {
       background: var(--primary);
       color: white;
@@ -73,7 +70,6 @@
       text-decoration: underline;
     }
 
-    /* MAIN CONTENT */
     main {
       max-width: 960px;
       margin: 2rem auto;
@@ -119,19 +115,16 @@
 
 <body>
 
-  <!-- HEADER -->
   <header>
     <div class="logo">
       <img src="https://raw.githubusercontent.com/herceg133/url/85f581127a70bd581d66e6fb0c53f92d6d9761c8/herceg-lusic5050.jpg" alt="Logo HERCEG LUŠIĆ">
     </div>
   </header>
 
-  <!-- HERO IMAGE -->
   <div class="hero">
     Professionelle Unternehmensdienstleistungen
   </div>
 
-  <!-- NAVIGATION -->
   <nav>
     <a href="#profil">Profil</a>
     <a href="#kontakt">Kontakt</a>
@@ -139,14 +132,14 @@
     <a href="#datenschutz">Datenschutz</a>
   </nav>
 
-  <!-- MAIN CONTENT -->
   <main>
 
     <!-- PROFIL -->
     <section id="profil">
       <h2>Profil</h2>
 
-      <div class="image-block" style="background-image:url('https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&w=1600&q=80');"></div>
+      <!-- NEUES PROFIL-BILD -->
+      <div class="image-block" style="background-image:url('https://raw.githubusercontent.com/herceg133/url/9ef7d3a75e6550f3ea1987bc6a42469aeda91474/hunters-race-MYbhN8KaaEc-unsplash.jpg');"></div>
 
       <p>
         Die HERCEG LUŠIĆ UG existiert seit 2014 und steht für professionelle, strukturierte und verantwortungsbewusste Unternehmensdienstleistungen.
