--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HERCEG LUŠIĆ UG</title>
-  <meta name="description" content="HERCEG LUŠIĆ UG – Professionelle Unternehmensdienstleistungen." />
+
+  <!-- Moderne Schrift: INTER -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -17,10 +21,11 @@
 
     body {
       margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      font-family: 'Inter', sans-serif;
       background: var(--background);
       color: var(--text);
-      line-height: 1.6;
+      line-height: 1.65;
+      font-size: 1rem;
     }
 
     header {
@@ -44,37 +49,37 @@
       top: 20px;
       right: 20px;
       display: flex;
-      gap: 10px;
+      gap: 12px;
     }
 
     .flag-btn {
-      width: 42px;
-      height: 28px;
+      width: 46px;
+      height: 30px;
       border-radius: 6px;
       cursor: pointer;
       border: 2px solid #ddd;
-      transition: 0.2s;
+      transition: 0.25s;
       background-size: cover;
       background-position: center;
     }
 
     .flag-btn:hover {
-      transform: scale(1.1);
+      transform: scale(1.12);
       border-color: var(--primary);
     }
 
     .hero {
       background: url("https://raw.githubusercontent.com/herceg133/url/10b573da6a273fbad799dad5471038aefaa6953e/sean-pollock-PhYq704ffdA-unsplash.jpg")
         center/cover no-repeat;
-      height: 340px;
+      height: 360px;
       display: flex;
       align-items: center;
       justify-content: center;
       color: white;
       text-shadow: 0 2px 6px rgba(0,0,0,0.4);
-      font-size: 1.8rem;
+      font-size: 2rem;
       font-weight: 600;
-      letter-spacing: 0.05em;
+      letter-spacing: 0.03em;
     }
 
     nav {
@@ -82,59 +87,66 @@
       color: white;
       display: flex;
       justify-content: center;
-      gap: 1.5rem;
-      padding: 0.75rem 1rem;
-      font-size: 0.95rem;
+      gap: 2rem;
+      padding: 1rem;
+      font-size: 1rem;
+      font-weight: 500;
     }
 
     nav a {
       color: #e0e7ff;
       text-decoration: none;
+      transition: 0.2s;
     }
 
     nav a:hover {
+      color: white;
       text-decoration: underline;
     }
 
     main {
       max-width: 960px;
-      margin: 2rem auto;
+      margin: 2.5rem auto;
       padding: 0 1rem;
     }
 
     section {
       background: white;
-      padding: 1.5rem;
-      margin-bottom: 1.5rem;
-      border-radius: 6px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.06);
+      padding: 2rem;
+      margin-bottom: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.06);
     }
 
     section h2 {
       margin-top: 0;
-      font-size: 1.3rem;
+      font-size: 1.6rem;
+      font-weight: 600;
       color: var(--primary);
+      letter-spacing: 0.02em;
     }
 
     .image-block {
       width: 100%;
-      height: 220px;
-      border-radius: 6px;
+      height: 240px;
+      border-radius: 10px;
       background-size: cover;
       background-position: center;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
     }
 
     .small {
-      font-size: 0.9rem;
+      font-size: 0.95rem;
+      line-height: 1.6;
     }
 
     footer {
       text-align: center;
-      padding: 1rem;
+      padding: 1.5rem;
       background: #e5e7eb;
-      font-size: 0.85rem;
+      font-size: 0.9rem;
       color: #4b5563;
+      margin-top: 2rem;
     }
   </style>
 </head>
@@ -287,4 +299,5 @@
 
 </body>
 </html>
+
 
